tests/codegen/fail/interface/trait/argument_non_deprecable.rs
use juniper::graphql_interface;

#[graphql_interface]
trait Character {
    fn id(&self, #[graphql(deprecated)] num: i32) -> &str;
    async fn name(&self, #[graphql(deprecated = "reason")] pre: Vec<String>) -> &str;
}

fn main() {}
