tests/codegen/fail/interface/trait/argument_non_deprecable.stderr
error[E0080]: evaluation panicked: argument `num` of `Character.id` field cannot be deprecated, because its type `Int!` is neither `Null`able nor the default argument value is specified
 --> fail/interface/trait/argument_non_deprecable.rs:5:46
  |
5 |     fn id(&self, #[graphql(deprecated)] num: i32) -> &str;
  |                                              ^^^ evaluation of `<CharacterValueEnum as juniper::marker::IsOutputType<__S>>::mark::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field_arg_deprecable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: argument `pre` of `Character.name` field cannot be deprecated, because its type `[String!]!` is neither `Null`able nor the default argument value is specified
 --> fail/interface/trait/argument_non_deprecable.rs:6:65
  |
6 |     async fn name(&self, #[graphql(deprecated = "reason")] pre: Vec<String>) -> &str;
  |                                                                 ^^^ evaluation of `<CharacterValueEnum as juniper::marker::IsOutputType<__S>>::mark::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field_arg_deprecable` (in Nightly builds, run with -Z macro-backtrace for more info)
